--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
     <h1>Titre de la page</h1>
-    <p>paragraphe1</p>
-    <p>paragraphe2</p>
-    <p>paragraphe3</p>
+    <section>
+        <h1>article 1</h1>
+    </section>
+
+
 </body>
 
 </html>
